--- a/src/Club/MessageBundle/TODO
+++ b/src/Club/MessageBundle/TODO
@@ -1,4 +1,5 @@
 - copy a message for resend
 - make sure web/uploads is always writeable
+- should be able to change interval times on tasks
 
 - translation
