--- a/src/Club/MessageBundle/TODO
+++ b/src/Club/MessageBundle/TODO
@@ -1,5 +1,4 @@
-- copy a message for resend
-- pager on message report
 - should send message with a submit button, not a javascript button
-
 - translation
+- make sure we can send more messages
+- recheck if the mailqueue is smart enough
