Updated todo for version 1.1

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,4 @@
-- prompt changes in product_attribute
+add api key, optional
+prompt changes in product_attribute
 participate bundle
 team bundle
-booking bundle
