--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,2 +1,6 @@
 participate bundle
 team bundle
+make more clear how has paid on event
+shop be possible to cancel auto renewal subscription as user
+more visible labels for logs
+improve user filter design
