Added initial subscription page.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,4 +1,6 @@
+make it clear if a subscription should be renewed or not
+shop be possible to cancel auto renewal subscription as user
 participate bundle
 team bundle
-shop be possible to cancel auto renewal subscription as user
 improve user filter design
+most not be possible to change password on demo page
