--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,3 +2,5 @@ participate bundle
 team bundle
 improve user filter design
 most not be possible to change password on demo page
+add role_staff on release
+add group staff on release
