Added DataFixtures for TeamLevel Added foreign key to Schedule from Schedule Fixed edit Schedule

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,5 +2,7 @@ participate bundle
 team bundle
 improve user filter design
 most not be possible to change password on demo page
+add level CRUD
+add priority to level
 add role_staff on release
 add group staff on release
