--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -7,3 +7,10 @@ add priority to level
 add role_staff on release
 add group staff on release
 occurs in the future is hardcoded
+
+edit all future
+fix regenerate occurs
+edit all repetition on a child
+cannot regenerate instances with already child
+fix schedule instructorss
+
