Fixed generate all schedules.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -12,3 +12,5 @@ fix regenerate occurs
 edit all repetition on a child
 cannot regenerate instances with already child
 fix schedule instructorss
+
+fix all copy of datetime objects, use CLONE objects instead
