--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,21 +1,22 @@
 participate bundle
-team bundle
 improve user filter design
 most not be possible to change password on demo page
+get API events by date
+
+== TEAM BUNDLE ==
 add level CRUD
 add priority to level
 add role_staff on release
 add group staff on release
 occurs in the future is hardcoded
-
 fix regenerate occurs
 edit all repetition on a child
 cannot regenerate instances with already child
 fix schedule instructors
-
 fix all copy of datetime objects, use CLONE objects instead
 when generate schedules, make sure to generate 25 occurs ahead of today
 change repetition form for parent does not work
-
 add team groups
 add constraint, that you cannot attend expired teams
+make sure you have subscription to subscribe to a team
+add location to team
