--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -3,9 +3,7 @@ improve user filter design
 most not be possible to change password on demo page
 
 == TEAM BUNDLE ==
-add role_staff on release
-add group staff on release
-occurs in the future is hardcoded
+remove clubmaster from location array
 fix regenerate occurs
 edit all repetition on a child
 cannot regenerate instances with already child
@@ -13,6 +11,9 @@ fix schedule instructors
 fix all copy of datetime objects, use CLONE objects instead
 when generate schedules, make sure to generate 25 occurs ahead of today
 change repetition form for parent does not work
-add team groups
 add constraint, that you cannot attend expired teams
 make sure you have subscription to subscribe to a team
+
+== BEFORE RELEASE ==
+add role_staff on release
+add group staff on release
