--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -17,3 +17,37 @@ make sure repetition monthly is valid, either days of month or week is set
 add role_staff on release
 add group staff on release
 add new team task
+
+== CHECKLIST ==
+## check edit all schedule ##
+OK - første
+
+## check edit future schedule ##
+OK - første
+OK - før
+OK - parent
+OK - efter
+
+## check edit all repetition ##
+OK - første
+
+## check edit future repetition ##
+OK - første
+OK - før
+OK - parent
+efter
+
+## check delete all ##
+OK - første
+
+## check delete future ##
+første
+før
+parent
+efter
+
+## check generate ##
+generate never
+generate max occurs
+generate end date
+
