Added team attribute to products.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -10,3 +10,4 @@ make sure you have subscription to subscribe to a team
 add role_staff on release
 add group staff on release
 add new team task
+add team to shop attributes
