Added participant actions.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -1,7 +1,7 @@
 improve user filter design
 most not be possible to change password on demo page
-participate bundle
 make team tests
+fix logo for participant_link.html.twig
 
 == BEFORE RELEASE ==
 add role_staff on release
