Added user dashboard.

--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -2,8 +2,8 @@
 improve user filter design
 most not be possible to change password on demo page
 add dashboard for user
-  not finished orders
   attending teams
+translation to danish
 
 == BEFORE RELEASE ==
 add role_staff on release
