--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -8,3 +8,4 @@ cleanup repository classes
 make some more tests
 coupon option to go below zero
 implement gravatar
+write that we are database independent
