--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -6,3 +6,8 @@ cleanup repository classes
 make some more tests
 coupon option to go below zero
 implement gravatar
+
+== TEAM PARAMETERS ==
+cannot cancel team within start date
+max attends
+max attends / day
