--- a/src/Club/TODO
+++ b/src/Club/TODO
@@ -11,3 +11,4 @@ implement gravatar
 cannot cancel team within start date
 max attends
 max attends / day
+be able to delete booking within 5 minutes after created
